--- a/client/web/static/css/home.css
+++ b/client/web/static/css/home.css
@@ -1,7 +1,3 @@
-body {
-    overflow: hidden;
-}
-
 .bg {
     z-index: -100;
     height: 100vh;
